# production-ready

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  components.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0ef14a09e531_create_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/models/: user.py
backend/app/routers/: auth.py  users.py
backend/app/schemas/: auth.py  common.py  user.py
backend/tests/: conftest.py  test_auth.py  test_users.py
src/app/: layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/login/: page.tsx
src/components/: providers.tsx
src/components/common/: data-table.tsx  login-form.tsx  permission-demo.tsx  revenue-chart.tsx  users-table.tsx
src/components/common/__tests__/: data-table.test.tsx  login-form.test.tsx
src/config/: features.config.ts  site.config.ts
src/hooks/: use-debounce.ts  use-login.ts  use-users.ts
src/hooks/__tests__/: use-debounce.test.ts
src/lib/: ability.ts  axios.ts  query-client.ts  toast.ts  token-storage.ts  utils.ts
src/services/: auth.service.ts  user.service.ts
src/styles/: dark.css  globals.css  primitive.css  semantic.css  tailwind-theme.css
src/types/: api.ts  auth.ts
